# Fake360Driver

./: CMakeLists.txt  README.md
extras/fake360test/: main.cpp
include/: Fake360Controller.hpp  USBDevice.hpp  Xbox360ControllerInputReport.hpp
src/: Fake360Controller.cpp  USBDevice.cpp  Xbox360ControllerInputReport.cpp
